--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
 
         <section class="score-panel">
         	<ul class="stars">
-        		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        		<li class="star1"><i class="fa fa-star"></i></li>
+        		<li class="star2"><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0</span> Moves Time 
+          <span id="minutes"></span>:<span id="seconds"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
