--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         		<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">0</span> Moves Time 
-          <span id="minutes"></span>:<span id="seconds"></span>
+        	<span class="moves">0</span> Moves Time
+          <span id="seconds"></span>
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
